# cookiecutter

./: README.md  WHY.md  cookiecutter.json  mypy.ini  src.md  src1.md
.github/: ci.yml  docs.yml
.github/workflows/: ci.yml  docs.yml  test.yml
TODO/: 5.md
deploy/: fabfile.py
docs/: multiprotocol_examples.md
hooks/: post_gen_project.py  pre_gen_project.py
quality/: .flake8  .pre-commit-config.yaml  .pylintrc  Makefile  __init__.py  pyproject.toml  testers.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Makefile  README.md  dev_setup.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/core/: README.md  __init__.py  config.py  config_manager.py  error_handling.py  logging.py  monitoring.py  scaffold.py  test_config.py  utils.py
{{cookiecutter.project_slug}}/deploy/: fabfile.py
{{cookiecutter.project_slug}}/deploy/ansible/: deploy.yml  inventory.yml  playbook.yml
{{cookiecutter.project_slug}}/deploy/kubernetes/: deployment.yml  service.yml
{{cookiecutter.project_slug}}/deploy/scripts/: backup.sh  update.sh
{{cookiecutter.project_slug}}/docs/: developer_guide.md  environment_variables.md  llm_integration.md  modular_architecture.md  structure_simplification.md
{{cookiecutter.project_slug}}/email/: .env.example
{{cookiecutter.project_slug}}/email/imap/: client.py
{{cookiecutter.project_slug}}/ftp/: .env.example  client.py  server.py  test_ftp_server.py
{{cookiecutter.project_slug}}/grpc/: .env.example  Dockerfile  Makefile  client.py  pyproject.toml  server.py
{{cookiecutter.project_slug}}/grpc/proto/: process.proto
{{cookiecutter.project_slug}}/hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/imap/: .env.example  client.py  server.py  test_imap_client.py
{{cookiecutter.project_slug}}/langchain/: .env.example
{{cookiecutter.project_slug}}/mcp/: .env.example  Dockerfile  Makefile  README.md  mcp_server.py
{{cookiecutter.project_slug}}/mcp/process/: process.py
{{cookiecutter.project_slug}}/mcp/protocol/: discovery.py  negotiation.py
{{cookiecutter.project_slug}}/mcp/resources/: uri_templates.py  voices.py
{{cookiecutter.project_slug}}/mcp/sampling/: adaptive.py
{{cookiecutter.project_slug}}/mcp/tests/: test_mcp.py  test_protocol.py
{{cookiecutter.project_slug}}/mcp/tools/: process_tool.py  tts_tool.py  voice_config.py
{{cookiecutter.project_slug}}/mcp/transports/: hybrid.py  sse.py  stdio.py
{{cookiecutter.project_slug}}/mqtt/: .env.example  client.py  server.py  test_server.py
{{cookiecutter.project_slug}}/process/: .env.example  Dockerfile  Makefile  README.md  __init__.py  languages.py  plugin_system.py  process.py  process.py.bak  process_base.py  process_config.py  pyproject.toml  test_process.py
{{cookiecutter.project_slug}}/process/adapters/: coqui.py  google.py
{{cookiecutter.project_slug}}/quality/: Makefile  __init__.py  bandit.yaml  conftest.py  doc_checker.py  formatters.py  hooks.py  linters.py  pyproject.toml  reporters.py  secuirty.py  security.py  testers.py  tox.ini
{{cookiecutter.project_slug}}/rest/: .env.example  Dockerfile  Makefile  client.py  pyproject.toml  server.py  test_rest.py
{{cookiecutter.project_slug}}/rest/models/: requests.py
{{cookiecutter.project_slug}}/scripts/: quality.sh
{{cookiecutter.project_slug}}/shell/: Makefile  client.py  interactive.py  main.py  pyproject.toml
{{cookiecutter.project_slug}}/ssh/: .env.example  client.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_ftp_client.py  test_ftp_server.py  test_mqtt_client.py  test_mqtt_server.py  test_websocket_client.py
{{cookiecutter.project_slug}}/tests/e2e_tests/: test_e2e.py
{{cookiecutter.project_slug}}/tests/grpc_tests/: test_grpc.py
{{cookiecutter.project_slug}}/tests/mcp_tests/: test_mcp.py  test_protocol.py  test_tools.py  test_transports.py
{{cookiecutter.project_slug}}/tests/mqtt_tests/: test_client.py  test_server.py
{{cookiecutter.project_slug}}/tests/process_tests/: test_process.py
{{cookiecutter.project_slug}}/tests/rest_tests/: test_rest.py
{{cookiecutter.project_slug}}/tests/webrtc_tests/: test_webrtc.py
{{cookiecutter.project_slug}}/tts_engine/: Dockerfile  __init__.py  tts_engine.py
{{cookiecutter.project_slug}}/webrtc/: Dockerfile  Makefile  client.py  pyproject.toml  session.py  signaling.py  test_websocket_client.py
{{cookiecutter.project_slug}}/websocket/: .env.example  client.py  server.py
