[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Tom Sapletta <info@softreck.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
# Protokoły komunikacyjne
paho-mqtt = "^2.2.1"            # MQTT
websockets = "^11.0.3"          # WebSocket
fastapi = "^0.104.0"            # REST API
uvicorn = "^0.23.2"             # ASGI serwer
pyftpdlib = "^1.5.9"            # FTP serwer
paramiko = "^3.3.1"             # SSH klient/serwer
imaplib2 = "^3.6"               # IMAP klient
aiosmtplib = "^2.0.2"           # SMTP klient (async)
poplib3 = "^1.0.0"              # POP3 klient

# Monitorowanie i metryki
prometheus-client = "^0.17.1"   # Prometheus metryki
pyaml = "^23.5.9"               # Obsługa YAML
loguru = "^0.7.2"               # Zaawansowane logowanie

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
tox = "^4.11.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
# Dynamicznie ustawiana wersja Pythona na podstawie cookiecutter.python_version
# W szablonie używamy py311 jako domyślnej wersji, ale w wygenerowanym projekcie zostanie to zastąpione
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
# Dynamicznie ustawiana wersja Pythona na podstawie cookiecutter.python_version
# W szablonie używamy 3.11 jako domyślnej wersji, ale w wygenerowanym projekcie zostanie to zastąpione
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

