[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"] 
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

# Podstawowe zależności
pyaml = "^23.5.9"               # Obsługa YAML
loguru = "^0.7.2"               # Zaawansowane logowanie
prometheus-client = "^0.17.1"   # Prometheus metryki

{% if cookiecutter.use_mqtt == 'yes' %}
# MQTT
paho-mqtt = "^2.2.1"            # MQTT
{% endif %}

{% if cookiecutter.use_websocket == 'yes' or cookiecutter.use_webrtc == 'yes' %}
# WebSocket
websockets = "^11.0.3"          # WebSocket
{% endif %}

{% if cookiecutter.use_rest == 'yes' %}
# REST API
fastapi = "^0.104.0"            # REST API
uvicorn = "^0.23.2"             # ASGI serwer
{% endif %}

{% if cookiecutter.use_ftp == 'yes' %}
# FTP
pyftpdlib = "^1.5.9"            # FTP serwer
{% endif %}

{% if cookiecutter.use_ssh == 'yes' %}
# SSH
paramiko = "^3.3.1"             # SSH klient/serwer
{% endif %}

{% if cookiecutter.use_imap == 'yes' %}
# IMAP
imaplib2 = "^3.6"               # IMAP klient
{% endif %}

{% if cookiecutter.use_smtp == 'yes' %}
# SMTP
aiosmtplib = "^2.0.2"           # SMTP klient (async)
{% endif %}

{% if cookiecutter.use_pop3 == 'yes' %}
# POP3
poplib3 = "^1.0.0"              # POP3 klient
{% endif %}

{% if cookiecutter.use_grpc == 'yes' %}
# gRPC
grpcio = "^1.59.0"              # gRPC
grpcio-tools = "^1.59.0"        # gRPC narzędzia
protobuf = "^4.24.4"            # Protocol Buffers
{% endif %}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
tox = "^4.11.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
# Dynamicznie ustawiana wersja Pythona na podstawie cookiecutter.python_version
# W szablonie używamy py311 jako domyślnej wersji, ale w wygenerowanym projekcie zostanie to zastąpione
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
# Dynamicznie ustawiana wersja Pythona na podstawie cookiecutter.python_version
# W szablonie używamy 3.11 jako domyślnej wersji, ale w wygenerowanym projekcie zostanie to zastąpione
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

