[tool.poetry]
name = "grpc-service"
version = "0.1.0"
description = "gRPC service for Process TTS system"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"
protobuf = "^4.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
grpcio-testing = "^1.54.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
