[tool.poetry]
name = "process"
version = "0.1.0"
description = "Generyczny moduł procesu do rejestracji i uruchamiania dowolnych procesów."
authors = ["Tom Sapletta <>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
