[tool.poetry]
name = "quality"
version = "0.1.0"
description = "Quality checks for {{ cookiecutter.project_slug }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100  # Zmienione z 88 na 100
target-version = ['py311']
include = '\.pyi?$'